--- a/assets/css/loginform.css
+++ b/assets/css/loginform.css
@@ -1,41 +1,166 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
     background-size:cover;
     background-repeat:no-repeat;
     background-image: url(../Images/loginpage.jpg);
+    background-position: top left;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: -1;
     
+}
+.allContent{
+    position: relative;
+    top: -50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 10;
+}
+a{
+    text-decoration: none;
+    color: crimson;
+}
+a:hover{
+    color: black;
 }
 .title{
-    
-    font-weight:bold;
-    font-family:cursive;
-    padding-block: 50px;
-    text-indent: 10cm;
-    font-size:50px;
-    
+    margin-bottom: 20px;
+    text-align: center;
+    font-family: cursive;
+    padding: 10px;
+    color: rgb(0, 144, 48);
+    font-size: 3rem;
+}
+.Logincard{
+    top: 100px;
+    left: 200px;
+    display: flex;
+    width: 500px;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 20px;
+    border: 1px solid lightcoral;
+    height: 400px;
+    box-shadow: 0 0 5px 5px lightgrey;
+    padding: 20px;
+}
+
+form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
 }
 .formtitle{
-    font-weight:normal;
-    font-variant: inherit;
-    font-variant: small-caps;
-    text-align: center;
+    color: crimson;
 }
-.form {
-    border:1px solid;
-    border-radius: 20px;
-    width: 400px;
-    height: 300px;
-    box-sizing: border-box;
-    margin-left: 300px;
+hr{
+    width: 100%;
+    margin: 20px;
+    background-color: crimson;
+}
+input{
+    
+    width: 100%;
+    height: 30px;
+    padding: 5px 10px;
+    border-radius: 10px;
+    outline: none;
+    border: 1px solid pink;
+    font-family: cursive;
+    margin-left: 10px;
+}
+form span{
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+form span label{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.2rem;
+    color: crimson;
+}
+
+.bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.submitBtn{
+    width: 120px;
+    height: 40px;
+    border-radius: 10px;
+    border: 1px solid #fff;
+    color: #fff;
+    background-color: crimson;
+    cursor: pointer;
+    font-family: cursive;
+    font-weight: 300;
+    right: 10px;
+}
+
+.bottom p a{
+    border-bottom: 1px solid green;
+    padding-bottom: 5px;
+    font-weight: bold;
+    margin-left: 3px;
+    color: green;
+}
+.bottom p{
+    margin-right: 10px;
+}
+@media screen and (max-width:1120px) {
+    .Logincard{
+        width: 100%;
+        height: 100%;
+    }
     
 }
-.pass{
-    margin-left:100px;
+@media screen and (max-width:500px) {
+    body{
+        background-image: none;
+        background-color: rgba(255, 192, 203, 0.883);
+        
+    }
+    .allContent{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .Logincard{
+        width: 100%;
+        height: 100%;
+        box-shadow: none;
+        border-radius: 0;
+    }
+    .bottom{
+        flex-direction: column;
+    }
+    .bottom a{
+        margin-top: 10px;
+
+    }
+    form span label{
+        display: none; 
+    }
+    
 }
-.button{
-    margin-left: 50%;
-   
-}
-.text{
-    font-size: 50px;
-}
+
 
