--- a/assets/css/Calculator.css
+++ b/assets/css/Calculator.css
@@ -1,83 +1,58 @@
-body{
-  font-family: 'Open sans', sans-serif;
-  background-color: rgba(161, 154, 154, 0.418);
-}
-#container{
-  width: 1000px;
-  height: 570px;
-  background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(../assets/Images/calculator.jpg);
-  background-size: 100% 100%;
-  margin: 20px auto;
-}
-#calculator{
-  width: 320px;
-  height: 520px;
-  background-color: #eaedef;
-  margin: 0 auto;
-  top: 20px;
-  position: relative;
-  border-radius: 5px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-#result{
-  height: 120px;
-}
-#history{
-  text-align: right;
-  height: 20px;
-  margin: 0 20px;
-  padding-top: 20px;
-  font-size: 15px;
-  color: #91919191;
-}
-#output{
-  text-align: right;
-  height: 60px;
-  margin: 10px 20px;
-  font-size: 30px;
-}
-#keyboard{
-  height: 400px;
-}
-.operator, .number, .empty{
-  width: 50px;
-  height: 50px;
-  margin: 15px;
-  float: left;
-  border-radius: 50%;
-  border-width: 0;
-  font-weight: bold;
-  font-size: 15px;
-}
-.number, .empty{
-  background-color: #eaedef;
-}
-.number, .operator{
-  cursor: pointer;
-}
-.operator:active, .number:active{
-  font-size: 13px;
-}
-.operator:focus, .number:focus, .empty:focus{
-  outline: 0;
-}
-button:nth-child(4){
-  font-size: 20px;
-  background-color: #20b2aa;
-}
-button:nth-child(8){
-  font-size: 20px;
-  background-color: #ffa500;
-}
-button:nth-child(12){
-  font-size: 20px;
-  background-color: #f08080;
-}
-button:nth-child(16){
-  font-size: 20px;
-  background-color: #7d93e0;
-}
-button:nth-child(20){
-  font-size: 20px;
-  background-color: #9477af;
-}
+*, *::before, *::after {
+    box-sizing: border-box;
+    font-family: Gotham Rounded, sans-serif;
+    font-weight: normal;
+  }
+  
+  body {
+    padding: 0;
+    margin: 0;
+    background: linear-gradient(to right, #00AAFF, #00FF6C);
+  }
+  
+  .calculator-grid {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    min-height: 100vh;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+  }
+  
+  .calculator-grid > button {
+    cursor: pointer;
+    font-size: 2rem;
+    border: 1px solid white;
+    outline: none;
+    background-color: rgba(255, 255, 255, .75);
+  }
+  
+  .calculator-grid > button:hover {
+    background-color: rgba(255, 255, 255, .9);
+  }
+  
+  .span-two {
+    grid-column: span 2;
+  }
+  
+  .output {
+    grid-column: 1 / -1;
+    background-color: rgba(0, 0, 0, .75);
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    flex-direction: column;
+    padding: 10px;
+    word-wrap: break-word;
+    word-break: break-all;
+  }
+  
+  .output .previous-operand {
+    color: rgba(255, 255, 255, .75);
+    font-size: 1.5rem;
+  }
+  
+  .output .current-operand {
+    color: white;
+    font-size: 2.5rem;
+  }
