--- a/assets/css/tip_calculator.css
+++ b/assets/css/tip_calculator.css
@@ -17,7 +17,7 @@ body {
   width: 60%;
   margin: 0 auto;
   height: 300px;
-  background: cyan;
+  background: pink;
   padding: 10px;
   border-radius: 20px;
 }
