Added Dark Mode

--- a/assets/css/counter.css
+++ b/assets/css/counter.css
@@ -212,3 +212,31 @@ main {
     color: var(--clr-white);
     background: var(--clr-black);
 }
+
+
+/* <!-- This was added as a contribution --> */
+
+.darkbody{
+    background-color: black;
+    color: var(--clr-primary-6);
+}
+.darkbutton{
+    text-transform: uppercase;
+    background: transparent;
+    color: var(--clr-white);
+    padding: 0.375rem 0.75rem;
+    letter-spacing: var(--spacing);
+    display: inline-block;
+    transition: var(--transition);
+    font-size: 0.875rem;
+    border: 2px solid var(--clr-white);
+    cursor: pointer;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+    border-radius: var(--radius);
+    margin: 0.5rem;   
+}
+.darkbutton:hover{
+    color: var(--clr-black);
+    background: var(--clr-white);
+}
+/* <!-- This was added as a contribution --> */
