Dictionary_App_working done

--- a/assets/css/dictionary.css
+++ b/assets/css/dictionary.css
@@ -1,103 +1,154 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
+body{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  
+  background-color: #4158D0;
+background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 
-*:not(i) {
-    font-family: "Poppins", sans-serif;
 }
-
-
-body {
-    background: linear-gradient(to right, #24c6dc, #514a9d);
-    height: 100vh;                                                           /*LINEAR GRAIDENT WORKED BECAUSE OF THIS*/
+::selection{
+  color: #fff;
+  background: #4D59FB;
 }
-
-.container {
-    display: block;
-    text-align: justify;
-    background-color: #ffffff;
-    width: 90vmin;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    padding: 80px 50px;
-    border-radius: 10px;    
-    box-shadow: 0 20px 40px rgba(38, 33, 61, 0.2);
-    margin-bottom: 1.875rem;
+.wrapper{
+  width: 420px;
+  border-radius: 7px;
+  background: #fff;
+  padding: 25px 28px 45px;
+  box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.05);
 }
-
-.search-box {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
+.wrapper header{
+  font-size: 28px;
+  font-weight: 500;
+  text-align: center;
 }
-
-.search-box input {
-    padding: 5px;
-    width: 70%;
-    border: none;
-    outline: none;
-    border-bottom: 3px solid #ae9cff;
-    font-size: 16px;
+.wrapper .search{
+  position: relative;
+  margin: 35px 0 18px;
 }
-
-.search-box button {
-    padding: 15px 0;
-    width: 25%;
-    background-color:#FF5959;
-    border: none;
-    outline: none;
-    color: #ffffff;
-    border-radius: 5px;
+.search input{
+  height: 53px;
+  width: 100%;
+  outline: none;
+  font-size: 16px;
+  border-radius: 5px;
+  padding: 0 42px;
+  border: 1px solid #999;
 }
-
-.result {
-    position: relative;
+.search input:focus{
+  padding: 0 41px;
+  border: 2px solid #4D59FB;
 }
-
-.result h3 {
-    font-size: 30px;
-    color: #23177a;
+.search input::placeholder{
+  color: #B8B8B8;
 }
-
-.result .word {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 80px;
+.search :where(i, span){
+  position: absolute;
+  top: 50%;
+  color: #999;
+  transform: translateY(-50%);
 }
-
-.result button {
-    background-color: transparent;
-    color: #9145B6;
-    border: none;
-    outline: none;
-    font-size: 20px;
+.search i{
+  left: 18px;
+  pointer-events: none;
+  font-size: 16px;
 }
-
-.result .details {
-    display: flex;
-    gap: 10px;
-    color: #b3b6d4;
-    margin: 5px 0 20px 0;
-    font-size: 14px;
+.search input:focus ~ i{
+  color: #4D59FB;
 }
-
-.word-meaning {
-    color: #575a7b;
+.search span{
+  right: 15px;
+  cursor: pointer;
+  font-size: 18px;
+  display: none;
 }
-
-.word-example {
-    color: #344CB7;
-    font-style: italic;
-    border-left: 5px solid #ae9cff;
-    padding-left: 20px;
-    margin-top: 30px;
+.search input:valid ~ span{
+  display: block;
 }
-
-.error {
-    margin-top: 80px;
-    text-align: center;
+.wrapper .info-text{
+  font-size: 13px;
+  color: #9A9A9A;
+  margin: -3px 0 -10px;
+}
+.wrapper.active .info-text{
+  display: none;
+}
+.info-text span{
+  font-weight: 500;
+}
+.wrapper ul{
+  height: 0;
+  opacity: 0;
+  padding-right: 1px;
+  overflow-y: hidden;
+  transition: all 0.2s ease;
+}
+.wrapper.active ul{
+  opacity: 1;
+  height: 303px;
+}
+.wrapper ul li{
+  display: flex;
+  list-style: none;
+  margin-bottom: 14px;
+  align-items: center;
+  padding-bottom: 17px;
+  border-bottom: 1px solid #D9D9D9;
+  justify-content: space-between;
+}
+ul li:last-child{
+  margin-bottom: 0;
+  border-bottom: 0;
+  padding-bottom: 0;
+}
+ul .word p{
+  font-size: 22px;
+  font-weight: 500;
+}
+ul .word span{
+  font-size: 12px;
+  color: #989898;
+}
+ul .word i{
+  color: #999;
+  font-size: 15px;
+  cursor: pointer;
+}
+ul .content{
+  max-height: 215px;
+  overflow-y: auto;
+}
+ul .content::-webkit-scrollbar{
+  width: 0px;
+}
+.content li .details{
+  padding-left: 10px;
+  border-radius: 4px 0 0 4px;
+  border-left: 3px solid #4D59FB;
+}
+.content li p{
+  font-size: 17px;
+  font-weight: 500;
+}
+.content li span{
+  font-size: 15px;
+  color: #7E7E7E;
+}
+.content .synonyms .list{
+  display: flex;
+  flex-wrap: wrap;
+}
+.content .synonyms span{
+  cursor: pointer;
+  margin-right: 5px;
+  text-decoration: underline;
 }
