--- a/assets/css/restaurant/gallery.css
+++ b/assets/css/restaurant/gallery.css
@@ -63,37 +63,37 @@
 }
 .side1 {
   grid-area: side1;
-  background-image: url("/ZeroOctave-Javascript-Projects/assets/Images/food1.jpg");
+  background-image: url("./Images/food1.jpg");
 }
 .side2 {
   grid-area: side2;
-  background-image: url("/ZeroOctave-Javascript-Projects/assets/Images/food7.jpg");
+  background-image: url("./Images/food2.jpg");
 }
 .nav1 {
   grid-area: nav1;
-  background-image: url("/ZeroOctave-Javascript-Projects/assets/Images/food3.jpg");
+  background-image: url("./Images/food3.jpg");
 }
 .nav2 {
   grid-area: nav2;
-  background-image: url("/ZeroOctave-Javascript-Projects/assets/Images/food4.jpg");
+  background-image: url("./Images/food4.jpg");
 }
 .main1 {
   grid-area: main1;
-  background-image: url("/ZeroOctave-Javascript-Projects/assets/Images/food5.jpg");
+  background-image: url("./Images/food5.jpg");
 }
 .main2 {
   grid-area: main2;
-  background-image: url("/ZeroOctave-Javascript-Projects/assets/Images/food6.jpg");
+  background-image: url("./Images/food6.jpg");
 }
 .right {
   grid-area: right;
-  background-image: url("/ZeroOctave-Javascript-Projects/assets/Images/food2.jpg");
+  background-image: url("./Images/food7.jpg");
 }
 .footer1 {
   grid-area: footer1;
-  background-image: url("/ZeroOctave-Javascript-Projects/assets/Images/food8.jpg");
+  background-image: url("./Images/food8.jpg");
 }
 .footer2 {
   grid-area: footer2;
-  background-image: url("/ZeroOctave-Javascript-Projects/assets/Images/food9.jpg");
+  background-image: url("./Images/food9.jpg");
 }
