--- a/style.css
+++ b/style.css
@@ -204,63 +204,19 @@ li:hover {
 /* Loading css */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,600&display=swap');
 
-* {
-	box-sizing: border-box;
-}
-
-body {
-	background-color: #fafafa;
-	font-family: 'Open Sans', sans-serif;
-	padding-bottom: 100px;
-}
-
-.container {
-	margin: 0 auto;
-	max-width: 600px;
-}
-
-.blog-post {
-	background-color: #fff;
-    box-shadow: 0px 1px 2px rgba(50, 50, 50, .1), 
-		0px 2px 4px rgba(60, 60, 60, 0.1);
-	border-radius: 4px;
-	padding: 40px;
-	margin: 20px 0;
-}
-
-.title {
-	margin: 0;
-}
-
-.text {
-	color: #555;
-	margin: 20px 0;
-}
-
-.user-info {
-	display: flex;
-	align-items: center;
-}
-
-.user-info img {
-	border-radius: 50%;
-	height: 30px;
-	width: 30px;
-}
-
-.user-info span {
-	font-size: 13px;
-	margin-left: 10px;
-}
 
 .loading {
 	opacity: 0;
 	display: flex;
-	position: fixed;
-	bottom: 50px;
-	left: 50%;
-	transform: translateX(-50%);
+  justify-content:center;
+  width:100%;
+	/* position: fixed; */
+	/* bottom: 50px; */
+	/* left: 50%; */
+	/* transform: translateX(-50%); */
 	transition: opacity .3s ease-in;
+  margin:10px;
+  margin-bottom:20px;
 }
 
 .loading.show {
