--- a/assets/css/CaesarCipher.css
+++ b/assets/css/CaesarCipher.css
@@ -1,10 +1,14 @@
 * {
   padding: 0;
   margin: 0;
+  
 }
+.button:hover {
+   color: lightsalmon;
 
 
-p {
+p: {
   font-family: 'Montserrat', sans-serif;
   font-family: 'Roboto', sans-serif;
+  
 }
